...
                    </view>
                    <navigationItem key="navigationItem" title="Movielection" id="Y06-Gr-Y7E">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="magnifyingglass" catalog="system" id="hc2-8d-ucO">
                            <connections>
                                <action selector="search:" destination="BYZ-38-t0r" id="Icj-gD-dDW"/>
...
                                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <state key="normal" title="Select a movie">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Vos Films" id="qct-zZ-6o2">
                        <barButtonItem key="rightBarButtonItem" image="qrcode" catalog="system" id="fZ0-D5-ego">
                            <connections>
                                <action selector="qrAction:" destination="UP6-W9-y0c" id="VXS-xS-mEu"/>
...
                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <state key="normal" title="OK">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                <rect key="frame" x="173.5" y="32.5" width="51" height="52"/>
                                                <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" image="play.fill" catalog="system"/>
                                                <connections>
                                                    <action selector="playTrailerAction:" destination="jmS-Tr-wSy" eventType="touchUpInside" id="prV-mD-IFA"/>
...
                                                <rect key="frame" x="8" y="32.5" width="51" height="52"/>
                                                <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" image="plus" catalog="system">
                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                </state>
...
