...
}

//MARK: - Imperative methods

extension FilmDetailsController {
    func setImage(_ value: Bool) -> UIImage? {
        guard let trash = UIImage(systemName: "trash.fill"), let plus = UIImage(systemName: "plus") else {
            return nil
        }
        return value ? trash : plus
    }
}

...
