...
            self.searchBar.layer.transform = CATransform3DIdentity
        }
    }

    func setButtonSearch(search: Bool) -> UIButton {
        let searchButton : UIButton = UIButton(type: .custom)
        let image = search ? UIImage(systemName: "magnifyingglass") : UIImage(systemName: "arrow.uturn.left")
        searchButton.setImage(image, for: .normal)
        searchButton.addTarget(self, action: #selector(self.search(_:)), for: .touchUpInside)
        return searchButton
    }

    func openSearchBar() {
...
